# alpha_vantage

./: .clog.toml  .gitignore  .mergify.yml  .rustfmt.toml  .travis.yml  Cargo.toml  Makefile.toml  README.MD  aliases.js  bors.toml  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.chglog/: config.yml
.github/workflows/: build.yml  deploy_page.yml  publish.yml  relase_note.yml  release_note.yml  shell_and_spelling_check.yml  shellcheck.yml
alpha_vantage/: all.html  fn.blocking_set_api.html  fn.blocking_set_from_env.html  fn.blocking_set_with_env.html  fn.blocking_set_with_timeout.html  fn.set_api.html  fn.set_api_with_client.html  fn.set_from_env.html  fn.set_rapid_api.html  fn.set_with_env.html  fn.set_with_timeout.html  index.html  sidebar-items.js
alpha_vantage/api/: enum.OutputSize.html  enum.Provider.html  enum.TimeSeriesInterval.html  index.html  sidebar-items.js  struct.APIClient.html  struct.ApiClient.html
alpha_vantage/blocking/: index.html  sidebar-items.js  struct.APIKey.html
alpha_vantage/client/: index.html  sidebar-items.js  trait.HttpClient.html  type.DefaultClient.html
alpha_vantage/crypto/: enum.CryptoFunction.html  fn.crypto.html  index.html  sidebar-items.js  struct.Crypto.html  struct.CryptoBuilder.html  struct.Data.html  struct.Entry.html  trait.VecEntry.html
alpha_vantage/crypto_rating/: index.html  sidebar-items.js  struct.CryptoRating.html
alpha_vantage/custom/: index.html  sidebar-items.js  struct.CustomBuilder.html
alpha_vantage/earning/: index.html  sidebar-items.js  struct.Annual.html  struct.Earning.html  struct.EarningBuilder.html  struct.Quarterly.html
alpha_vantage/economic_indicator/: enum.EconomicIndicatorInterval.html  enum.EconomicIndicatorMaturity.html  index.html  sidebar-items.js  struct.Data.html  struct.EconomicIndicator.html  struct.EconomicIndicatorBuilder.html  trait.VecData.html
alpha_vantage/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
alpha_vantage/exchange/: fn.exchange.html  index.html  sidebar-items.js  struct.Exchange.html  struct.ExchangeBuilder.html
alpha_vantage/forex/: enum.ForexFunction.html  fn.forex.html  index.html  sidebar-items.js  struct.Data.html  struct.Entry.html  struct.Forex.html  struct.ForexBuilder.html  trait.VecEntry.html
alpha_vantage/income_statement/: index.html  sidebar-items.js  struct.IncomeStatement.html  struct.Report.html  type.AnnualReport.html  type.QuarterlyReport.html
alpha_vantage/quote/: fn.quote.html  index.html  sidebar-items.js  struct.Quote.html  struct.QuoteBuilder.html
ci/: before_script.sh  codecov_coverage.sh  create_index.sh  install.sh  script.sh
scripts/: codecov_coverage.sh  create_index.sh
src/: api.rs  blocking.rs  client.rs  crypto.rs  crypto_rating.rs  custom.rs  deserialize.rs  earning.rs  economic_indicator.rs  error.rs  exchange.rs  forex.rs  income_statement.rs  lib.rs  quote.rs  search.rs  sector.rs  stock_time.rs  technical_indicator.rs  time_series.rs  user.rs  util.rs  utils.rs  vec_trait.rs
src/user/: mod.rs  (+1 more)
tests/: integration_test.rs
(+100 files in other folders)
