[package]
name = "alpha_vantage"
version = "0.8.1"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/alpha_vantage"
repository = "https://github.com/iamsauravsharma/alpha_vantage"
description = "Rust Wrapper/Crate built for AlphaVantage API"
license = "MIT"
readme = "README.MD"
edition = "2021"
keywords = ["alphavantage", "currency", "finance", "stock", "exchange"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
async-trait = "0.1.57"
reqwest = { version = "0.11.12", optional = true }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
surf = { version = "2.3.2", optional = true }
thiserror = "1.0.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest"]
surf-client = ["surf"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
