[package]
name = "alpha_vantage"
version = "0.9.0"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/alpha_vantage"
repository = "https://github.com/iamsauravsharma/alpha_vantage"
description = "Rust Wrapper/Crate built for AlphaVantage API"
license = "MIT"
readme = "README.MD"
edition = "2021"
keywords = ["alphavantage", "currency", "finance", "stock", "exchange"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
async-trait = "0.1.66"
reqwest = { version = "0.11.14", default-features = false, optional = true, features = [
    "rustls-tls",
] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
